2002-11-03  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Added methods for class support
	-[GormDocument openSound:], -[GormDocument _createSoundPlaceHolder:].
	Modified -[GormDocument saveDocument], and
	-[GormDocument loadDocument] to handle copying of sounds into the 
	gorm file package when the .gorm is saved and registering them w/
	Gorm when the package is subsequently loaded.
	* GormPrivate.h: Added class declaration for GormSound, the
	sound placeholder class.  This class contains the minimal information
	needed to handle sounds in Gorm.
	* GormSoundInspector.[hm]: The sound inspector.
	* Resources/GormSoundInspector.gorm: The beginnings of the sound
	inspector gui.
	* Resources: Replaced old gorm files w/ packages.
	
2002-10-31  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: -[GormDocument saveDocument:] made changes to allow
	saving of .gorm files as directories.  -[GormDocument loadDocument:]
	made necessary modifications to load .gorm directory contents.  Also
	made certain that old gorm files are loaded properly and converted
	when saved.
	* GormClassManager.m: Made modifications to allow NSSecureTextField
	to substitute for NSTextField and NSPanel to substitute for NSWindow.
	Also made changes to allow FirstResponder to modified.

2002-10-29  Adam Fedor  <fedor@gnu.org>

	* GormMatrixEditor.m (-_constrainedFrame:framewithEvent:andKnob:knob): 
	Set height/width to 0 when rows/cols = 1.
	(-validateFrame:framewithEvent:theEventandPlacementInfo:): Idem.
	* GormWindowEditor.m: Remove commented out code.

2002-10-29  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* GormDocument.m: change nameTable retaining policy from 
	NSNonRetainedObjectMapKeyCallBacks to NSObjectMapKeyCallBacks.
	This eliminates segfaults that happened when saving/testing multiple
	times. Note: this might not be the best solution, but it does work.

	* GormInspectorsManager.m
	* GormScrollViewEditor.m
	* Palettes/3Containers/inspectors.m