@@ -1,3 +1,10 @@
+2002-11-05  Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormDocument.m: added -[GormDocument openGModel:] to allow the
+	loading of .gmodel files for conversion into .gorm files.
+	* GormSoundInspector.m: Corrected a problem w/ deleting sounds which
+	was causing a core dump.
+	
 2002-11-03  Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormDocument.m: Added methods for class support
